--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Create .env.development file from secret
+        run: echo "${{ secrets.ENV_DEVELOPMENT }}" > backend/.env.development
+
       - name: Build and Push Backend Docker Image
         uses: docker/build-push-action@v5
         with:
